--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="flexslider">
                   <ul class="slides">
                     <li>
-                      <img src="images/possiblewfp5.jpg" alt="" height = 100% />
+                      <img src="images/possibleWFP5.jpg" alt="" height = 100% />
                     </li>
                     <li>
 
@@ -156,7 +156,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Gallery</h2>
-            <h3 class="section-subheading text-muted">Have a look inside our spa</h3>
+            <h3 class="section-subheading text-muted">Have a look inside our restaurant</h3>
           </div>
         </div>
         <div class="row">
