--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     </li>
                     <li>
 
-                      <img src="images/wfp2.jpg" alt="" height = 100%/>
+                      <img src="images/WFP2.jpg" alt="" height = 100%/>
                     </li>
                     <li>
                       <img src="images/wfp3.jpg" alt="" height = 100%/>
                     </li>
                     <li>
-                    	<img src = "images/wfp4.jpg" alt = "">
+                    	<img src = "images/wfp4.jpg" alt = "" height = 100%>
                     </li>
 
                   </ul>
