--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 		<hr>
 
                 	<div id = "menuPics1">
-                		<img src = "images/WFPSPECIAL6.JPG">
-                		<img src = "images/WFPSPECIAL7.JPG">
-                		<img src = "images/WFPSPECIAL8.JPG">
+                		<img src = "images/pizza1.jpg">
+                		<img src = "images/pizza2.jpg">
+                		<img src = "images/pizza3.jpg">
                 	</div>
 
                 	<div class = "menuText">
