--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="flexslider">
                   <ul class="slides">
                     <li>
-                      <img src="images/possibleWFP5.jpg" alt="" height = 100% />
+                      <img src="images/WFP8.jpg" alt="" height = 100% />
                     </li>
                     <li>
 
