--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        	<a class="navbar-brand" href="#" style="font-size:  23.5px !important " >World Famous Pizza</a>
+                        <a href="index.html">
+                            <img src="images/worldfamouslogo.png" alt="Cardea">
+                        </a>   
                         
                     </div>
 
