--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a href="index.html">
-                            <img src="images/worldfamouslogo.png" alt="Cardea">
+                            <img src="images/worldfamouslogo.png" height = "35" alt="Cardea">
                         </a>   
                         
                     </div>
