--- a/index.html
+++ b/index.html
@@ -244,9 +244,6 @@
         <!-- ============ Reservation  ============= -->
         <hr>
 
-        <div class = "storeDetailsText">
-          <center><h2>STORE DETAILS</h2></center>
-        </div>
 
                                 <div class="container">
                                 <div class="row">
@@ -256,7 +253,7 @@
                                               <div class = "right-text">
                                                 <!-- Name -->
                                                 <p>- Prices subject to change without notice</p>
-                                                 <p> - Minimum of $13.99(before taxes) required for delivery</p>
+                                             
                                                  <p> - Prices subject to taxes </p>
                                                  <p> - Our drivers carry no more than $20 change </p>
                                                  <p> - We cater school lunch and parties </p>
@@ -281,10 +278,14 @@
                                             <p>Sunday: 2:00 PM - 11:00 PM</p>
                                         </div>
                                     </div>
+					                <div class = "storeDetailsText">
+          <center><h2>FREE DELIVERY</h2></center>
+								<h3>Minimum of $13.99(before taxes) required for delivery</h3>
+        </div>
+
                                 </div>
                             </div>
 
-        
 
         <!-- ============ Social Section  ============= -->
 			<hr>
